Thu Jan 20 00:20:26 2005  Tim Janik  <timj@gtk.org>

	* beast-gtk/gxk/gxkradget.c: removed special character functions 
	$(<), $(<=), $(>), $(>=), $(!=), $(=) and $(==). suitable replacement
	functions for float comparisons are already in place.

Thu Jan 20 00:07:47 2005  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstapp.[hc]: removed externally unused functions from public
	API. code cleanups. 

	* beast-gtk/gxk/gxkaction.[hc]: removed GxkActionFactory. added
	gxk_window_add_action_client() and gxk_window_remove_action_client()
	to receive notification about newly added action lists. 

	* beast-gtk/gxk/gxkglobals.[hc]: removed undue '_'-prefixing from symbols.

	* beast-gtk/gxk/gxkradgetfactory.[hc]: derive from GObject and register with
	gxk_window_add_action_client() and gxk_window_remove_action_client().
	code cleanups.

Wed Jan 19 19:41:12 2005  Tim Janik  <timj@gtk.org>

	* beast-gtk/gxk/gxkutils.[hc]: added ::attached-hierarchy-changed signal
	to GtkWidgetClass. this signal is used to proxy the ::hierarchy-changed
	signal to out-of-branch widgets like an option menu's menu or a submenu.
	refer to the docs on gxk_widget_attached_hierarchy_changed().
	added gxk_menu_set_active() as a replacement for gtk_menu_set_active()
	which doesn't properly emit change notification.
	gxk_menu_attach*(): proxy ::attached-hierarchy-changed signals, this
	allowed a lot of internal code cleanups.

	* beast-gtk/gxk/gxkassortment.[hc]: new management and publishing object
	for administration of notebook pages and other dynamic selection lists.

	* beast-gtk/gxk/gxkmenubutton.[hc]: support assortment publishing.

	* beast-gtk/gxk/gxknotebook.[hc]: new replacement widget for GtkNotebook.
	GxkNotebook supports page updates through GxkAssortment. 
	emits ::viewable-changed signal recursively upon page switches.

	* beast-gtk/bstapp.[hc]: publish a GxkAssortment to maintain
	project pages. added finalize handler. changed 
	bst_app_reload_supers() to modify the project page assortment.
