@@ -48,7 +48,7 @@ param_entry_create (GxkParam    *param,
   const GxkParamEditorSizes *esizes = gxk_param_get_editor_sizes (param);
   gxk_widget_add_font_requisition (widget, esizes->string_chars, esizes->string_digits);
   gxk_param_entry_connect_handlers (param, widget, param_entry_changed);
-  gtk_tooltips_set_tip (GXK_TOOLTIPS, widget, tooltip, NULL);
+  gxk_widget_set_tooltip (widget, tooltip);
   gxk_widget_add_option (widget, "hexpand", "+");
   return widget;
 }
